pre-insert SDWebImage

--- a/FlickrPhotoGallery/Base.lproj/Main.storyboard
+++ b/FlickrPhotoGallery/Base.lproj/Main.storyboard
@@ -57,7 +57,7 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="LC4-lg-bnF"/>
                                 </connections>
                             </collectionView>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="b19-7D-h9C">
+                            <searchBar contentMode="redraw" barStyle="blackTranslucent" translatesAutoresizingMaskIntoConstraints="NO" id="b19-7D-h9C">
                                 <rect key="frame" x="0.0" y="20" width="375" height="56"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
