--- a/FlickrPhotoGallery/Base.lproj/Main.storyboard
+++ b/FlickrPhotoGallery/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="voB-dU-VO3">
                                 <rect key="frame" x="0.0" y="56" width="375" height="547"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="4in-ab-fhR">
                                     <size key="itemSize" width="100" height="100"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -82,7 +82,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1532" y="143.47826086956522"/>
+            <point key="canvasLocation" x="1447" y="143"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="a2d-ge-byI">
@@ -92,7 +92,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7Eq-vZ-XLe">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7Eq-vZ-XLe">
                                 <rect key="frame" x="16" y="124" width="343" height="419"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="343" id="hDc-hF-qfX"/>
@@ -100,7 +100,7 @@
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                         <constraints>
                             <constraint firstItem="7Eq-vZ-XLe" firstAttribute="centerY" secondItem="9rf-ua-4nC" secondAttribute="centerY" id="C5o-E8-2pc"/>
                             <constraint firstItem="7Eq-vZ-XLe" firstAttribute="centerX" secondItem="9rf-ua-4nC" secondAttribute="centerX" id="GmS-Hc-NKR"/>
@@ -113,7 +113,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ybf-BJ-YNW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2310" y="143"/>
+            <point key="canvasLocation" x="2193" y="143"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="OYF-fV-gIl">
