--- a/FlickrPhotoGallery/Base.lproj/Main.storyboard
+++ b/FlickrPhotoGallery/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="p4O-za-0Nv">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="p4O-za-0Nv">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,11 +15,11 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="FlickrPhotoGallery" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="551"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="voB-dU-VO3">
-                                <rect key="frame" x="0.0" y="56" width="375" height="547"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="551"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="4in-ab-fhR">
                                     <size key="itemSize" width="100" height="100"/>
@@ -57,32 +57,24 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="LC4-lg-bnF"/>
                                 </connections>
                             </collectionView>
-                            <searchBar contentMode="redraw" barStyle="black" searchBarStyle="prominent" text="" placeholder="Search" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b19-7D-h9C">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="voB-dU-VO3" firstAttribute="top" secondItem="b19-7D-h9C" secondAttribute="bottom" id="1Cd-IK-hiu"/>
                             <constraint firstItem="voB-dU-VO3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="43V-Tq-7HM"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="voB-dU-VO3" secondAttribute="trailing" id="7rQ-84-ZL5"/>
+                            <constraint firstItem="voB-dU-VO3" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="AfE-ce-AMH"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="voB-dU-VO3" secondAttribute="bottom" id="XbF-Zq-ZZW"/>
-                            <constraint firstItem="b19-7D-h9C" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="fKX-0e-HGJ"/>
-                            <constraint firstItem="b19-7D-h9C" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="oKs-20-haf"/>
-                            <constraint firstItem="b19-7D-h9C" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="rZu-mr-13y"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="PhotoSearch" id="vzl-DI-hlp"/>
                     <connections>
                         <outlet property="collectionView" destination="voB-dU-VO3" id="CE9-Nw-UWc"/>
-                        <outlet property="txtSearchBar" destination="b19-7D-h9C" id="qGj-LL-F0H"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1447" y="143"/>
+            <point key="canvasLocation" x="1445.5999999999999" y="142.57871064467767"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="a2d-ge-byI">
@@ -100,7 +92,8 @@
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="7Eq-vZ-XLe" firstAttribute="centerY" secondItem="9rf-ua-4nC" secondAttribute="centerY" id="C5o-E8-2pc"/>
                             <constraint firstItem="7Eq-vZ-XLe" firstAttribute="centerX" secondItem="9rf-ua-4nC" secondAttribute="centerX" id="GmS-Hc-NKR"/>
@@ -121,8 +114,8 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="p4O-za-0Nv" sceneMemberID="viewController">
                     <toolbarItems/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black" translucent="NO"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" translucent="NO" id="A2R-se-eqj">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" translucent="NO" largeTitles="YES" id="A2R-se-eqj">
+                        <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
